--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="message" class="message-box">
         Te envío estas flores amarillas para iluminar tu día con la misma alegría y energía que siempre transmites. 🌼✨<br/>
         ¡Que tu vida esté llena de momentos brillantes y felices!<br/>
-        <strong>Aleshanda</strong>
+        <strong>Linda</strong>
     </div>
 
     <script>
